# idatt2503-o4

./: .gitignore  CMakeLists.txt  Cargo.toml  crash-3a4bb36cdcf01efd586148ad2d4215fce19bf874
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json  post-install.sh
Exercise_10/: CMakeLists.txt  Problem_10_5.cpp
Exercise_4/: CMakeLists.txt  print_filter_c.c  print_filter_cpp.cpp
Exercise_4/Task_1/: README.md  hello.s
Exercise_4/Task_1/scripts/: compile.sh  run.sh
Exercise_4/Task_2/: Cargo.toml  print_filter_c.c  print_filter_cpp.cpp
Exercise_4/Task_3/: README.md  more_functions.c
Exercise_4/Task_3/scripts/: build-exe.sh  build-lib.sh  run-exe.sh
Exercise_4/src/: main.rs
Exercise_5/: CMakeLists.txt  fuzzer.c  print_filter_c_fuzz.c  print_filter_c_fuzz.h
Exercise_5/scripts/: run_fuzzer.sh
Exercise_6/: CMakeLists.txt  crypto_auth.cpp  password_crack.c
Exercise_7/: CMakeLists.txt  Exercise_7_4.cpp  Exercise_7_5.cpp
Exercise_8/: AES_decrypt.py  AES_diffusion.py  AES_matrix.py  AES_roundkey.py  AES_sbox.py  CMakeLists.txt  Exercise_8_2.cpp  caesar_for_website.cpp  hex.cpp  hex.hpp
Exercise_9/: CMakeLists.txt  Problem_3.cpp  Problem_9_2.cpp  Problem_9_4.cpp  galois_field.cpp  galois_field.h  mul_table.txt
